# data-plugin-sdk-for-c-

./: CMakeLists.txt  README.md
examples/example1/: CMakeLists.txt  IChannelImpl.cpp  IChannelImpl.h  IGroupImpl.cpp  IRootImpl.cpp  IRootImpl.h  README.md  main.cpp
examples/example2/: CMakeLists.txt  IRootExportImpl.cpp  IRootExportImpl.h  README.md  main.cpp
examples/example3/: CMakeLists.txt  IChannelImpl.cpp  IChannelImpl.h  IGroupImpl.cpp  IGroupImpl.h  IRootExportImpl.cpp  IRootImpl.cpp  README.md  main.cpp
examples/example3/data/: data.example3
include/ni/dataplugin/: IChannel.h  IErrorInfo.h  IGroup.h  IProperties.h  IRoot.h  IRootExport.h  IRootFactory.h  ParamString.h
include/ni/dataplugin/main/: Export.hpp  Import.hpp  ImportExport.hpp
register_data_plugin/: CMakeLists.txt  README.md  register_data_plugin.cpp
tests/simple_read_test/: CMakeLists.txt  README.md  simple_read_test.cpp
uri_templates/: plugin_read_file.uri.build.in  plugin_read_file.uri.install.in  plugin_read_write_file.uri.build.in  plugin_read_write_file.uri.install.in  plugin_write_file.uri.build.in  plugin_write_file.uri.install.in
